src/passes/02-parsing/jsligo/Tests/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c2_c1_c3.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit =>
  match(x, {
    One: (a) => unit,
    Two: (c) => unit,
    One: (b) => unit,
    Three: () => unit
  })
